--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,3 +29,18 @@ footer {
   align-self: baseline;
   flex-direction: row;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form_container {
+  display: flex;
+  flex-direction: column ;
+  justify-content: center;
+  width: fit-content;
+  padding: 5px;
+}
