--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Welcome to Viewing Party</h1>
+<div class="container">
+  <h1>Welcome to The Viewing Party</h1>
+
+  <p>An application to explore movies and create a viewing party event for you and your friends to watch a movie together.</p>
+</div>
