--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,4 +2,15 @@
   <h1>Welcome to The Viewing Party</h1>
 
   <p>An application to explore movies and create a viewing party event for you and your friends to watch a movie together.</p>
+
+  <%= form_with url: login_path, method: :post, local: true do |form| %>
+    <div class="form_container">
+      <%= form.label :email %>
+      <%= form.text_field :email %>
+      <%= form.label :password %>
+      <%= form.password_field :password %>
+      <%= form.submit "Sign In" %>
+    </div>
+  <% end %>
+  <%= link_to "New to Viewing Party? Register Here", signup_path %>
 </div>
