--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <h1>Welcome to Viewing Party</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus animi commodi cum, nesciunt praesentium voluptates omnis illum beatae accusamus in odit hic, eius quis magnam facere sed, eum repudiandae saepe.</p>
+
+  <p>Please Register for an Account</p>
 
   <%= form_with model: User.new, url: signup_path do |form| %>
     <div class="form_container">
