--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,7 @@
 <h1>Welcome <%= @user.email %>!</h1>
+
+<%= button_to "Discover Movies", discover_path, method: :get %>
+
+<p>insert friends section</p>
+
+<p>insert viewing parties hosted and invited</p>
