Add movie api details index and show page

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,5 +5,5 @@
 <p>insert list of movies based off of a movies api call</p>
 
 <% @movies.each do |movie| %>
-  <p><%= link_to movie[:title], movie_path(movie) %> Vote Average: <%= movie[:vote_average] %></p>
+  <p><%= link_to movie[:title], movie_path(movie[:id]) %> Vote Average: <%= movie[:vote_average] %></p>
 <% end %>
