Add search to discover page

--- a/app/views/movies/discover.html.erb
+++ b/app/views/movies/discover.html.erb
@@ -1,5 +1,9 @@
-<%= button_to "Find Top Rated Movies", movies_path, method: :get %>
+<%= button_to "Find Top Rated Movies", movies_path, method: :get, params{q: 'top_rated'} %>
 
 <h2>OR</h2>
 
-<p>insert search bar here</p>
+<%= form_with url: movies_path, local: true, method: :get do |form| %>
+  <%= form.label :q, 'Search by movie title:' %>
+  <%= form.text_field :q %>
+  <%= form.submit 'Find Movies' %>
+<% end %>
