--- a/app/views/movies/discover.html.erb
+++ b/app/views/movies/discover.html.erb
@@ -1,4 +1,4 @@
-<%= button_to "Find Top Rated Movies", movies_path, method: :get, params{q: 'top_rated'} %>
+<%= button_to "Find Top Rated Movies", movies_path, method: :get%>
 
 <h2>OR</h2>
 
