--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,8 +1,10 @@
 <%= button_to "Find Top Rated Movies", movies_path, method: :get %>
 
-<p>insert search bar here</p>
-
-<p>insert list of movies based off of a movies api call</p>
+<%= form_with url: movies_path, local: true, method: :get do |form| %>
+  <%= form.label :q, 'Search by movie title:' %>
+  <%= form.text_field :q %>
+  <%= form.submit 'Find Movies' %>
+<% end %>
 
 <% @movies.each do |movie| %>
   <p><%= link_to movie[:title], movie_path(movie[:id]) %> Vote Average: <%= movie[:vote_average] %></p>
