--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,20 +1,20 @@
-<p>movie title</p>
-
 <p>insert button to create viewing party</p>
+<div>
+  <h1><%= @movie[:title] %></h1>
+  <%= button_to "Create Viewing Party for Movie", new_viewing_party_path(@movie), method: :get %>
+</div>
 
-<p>insert movie details below</p>
-<h1>
- <%= @movie[:title] %>
-</h1>
-<p>Vote Average: <%= @movie[:vote_average] %></p>
-<p>Runtime: <%= @movie[:runtime] %></p>
+<div>
+  <p>Vote Average: <%= @movie[:vote_average] %></p>
+  <p>Runtime: <%= @movie[:runtime] %></p>
 
-<p>
-  Genre(s):
-  <% @movie[:genres].each do |genre| %>
-    <%= genre[:name] %>
-  <% end %>
-</p>
+  <p>
+    Genre(s):
+    <% @movie[:genres].each do |genre| %>
+      <%= genre[:name] %>
+    <% end %>
+  </p>
+</div>
 
 <h2>Summary</h2>
 <%= @movie[:overview] %>
