Add hover styling for links on movies index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,6 +70,10 @@ footer {
   .movie {
     display: flex;
     justify-content: space-between;
+
+    &:hover {
+      opacity: 50%;
+    }
   }
 }
 
