--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,32 +1,32 @@
 <div class="movie_detail">
   <div class="header">
-    <h1><%= @movie[:title] %></h1>
+    <h1><%= @movie.title %></h1>
     <%= button_to "Create Viewing Party for Movie", new_viewing_party_path(@movie), method: :get %>
   </div>
 
 
   <div class="details">
-    <p>Vote Average: <%= @movie[:vote_average] %></p>
-    <p>Runtime: <%= @movie[:runtime] %></p>
+    <p>Vote Average: <%= @movie.vote_average %></p>
+    <p>Runtime: <%= @movie.runtime %></p>
 
     <p>
       Genre(s):
-      <% @movie[:genres].each do |genre| %>
+      <% @movie.genres.each do |genre| %>
         <%= genre[:name] %>
       <% end %>
     </p>
   </div>
 
   <h2>Summary</h2>
-  <%= @movie[:overview] %>
+  <%= @movie.overview %>
 
   <h2>Cast</h2>
-  <% @cast.each do |member| %>
+  <% @movie.cast.each do |member| %>
     <p><%= member[:name] %> as <%= member[:character] %></p>
   <% end %>
 
-  <h2><%= @reviews.count %> Reviews</h2>
-  <% @reviews.each do |review| %>
+  <h2><%= @movie.reviews.size %> Reviews</h2>
+  <% @movie.reviews.each do |review| %>
     <h3>Author: <%= review[:author] %></h3>
     <%= review[:content] %>
   <% end %>
