Add welcome messaged based on whether the user is logged in or not

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <header class='container'>
+      <% if current_user.present? %>
+        <h1>Welcome <%= current_user.email %>!</h1>
+      <% end %>
+    </header>
     <main>
       <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, class: name %>
