Add styling to dashboard and initial setup for adding friends

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,3 +82,13 @@ footer {
   flex-direction: column;
   text-align: center;
 }
+
+.line {
+  border-top: 2px solid black;
+  padding-bottom: 10px;
+}
+
+.friend-container {
+  padding-bottom: 20px;
+}
+
