Add friend list capability to the dashboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,5 +90,11 @@ footer {
 
 .friend-container {
   padding-bottom: 20px;
+
+  // .add-friend-form {
+  //   button {
+  //     border-radius: 25%;
+  //   }
+  // }
 }
 
