--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,14 +1,12 @@
 <div class="movie_detail">
   <div class="header">
     <h1><%= @movie.title %></h1>
-    <%= button_to "Create Viewing Party for Movie", new_viewing_party_path(@movie), method: :get %>
+    <%= button_to "Create Viewing Party for Movie", new_viewing_party_path, method: :get, params: { title: @movie.title, movie_id: @movie.id, duration: @movie.runtime } %>
   </div>
-
 
   <div class="details">
     <p>Vote Average: <%= @movie.vote_average %></p>
     <p>Runtime: <%= @movie.runtime %></p>
-
     <p>
       Genre(s):
       <% @movie.genres.each do |genre| %>
@@ -17,17 +15,31 @@
     </p>
   </div>
 
-  <h2>Summary</h2>
-  <%= @movie.overview %>
+  <div class='line'></div>
 
-  <h2>Cast</h2>
-  <% @movie.cast.each do |member| %>
-    <p><%= member[:name] %> as <%= member[:character] %></p>
-  <% end %>
+  <div class='summary'>
+    <h2>Summary</h2>
+    <%= @movie.overview %>
 
-  <h2><%= @movie.reviews.size %> Reviews</h2>
-  <% @movie.reviews.each do |review| %>
-    <h3>Author: <%= review[:author] %></h3>
-    <%= review[:content] %>
-  <% end %>
+    <h2>Cast</h2>
+    <ul class='cast'>
+      <% @movie.cast.each do |member| %>
+        <li><%= member[:name] %> as <%= member[:character] %></li>
+      <% end %>
+    </ul>
+  </div>
+
+  <div class='line'></div>
+
+  <div class='reviews'>
+    <h2><%= @movie.reviews.size %> Reviews</h2>
+    <% @movie.reviews.each do |review| %>
+      <div class='content'>
+        <h3>Author: <%= review[:author] %></h3>
+        <p>
+          <%= review[:content] %>
+        </p>
+      </div>
+    <% end %>
+  </div>
 </div>
