--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -121,6 +121,25 @@ footer {
   // }
 }
 
+.party-container {
+  .parties {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .party {
+    margin: 10px 10px;
+    padding: 10px 10px;
+    border: 2px solid black;
+    width: 25%;
+
+    p {
+      display: flex;
+      justify-content: center;
+    }
+  }
+}
+
 .viewing-party-form {
   border: 1px solid black;
   width: 50%;
